--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -67,10 +67,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a431d282-f9ca-4d5d-8912-71ffc9d8ea19",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+      "0                  5.1               3.5                1.4               0.2\n",
+      "1                  4.9               3.0                1.4               0.2\n",
+      "2                  4.7               3.2                1.3               0.2\n",
+      "3                  4.6               3.1                1.5               0.2\n",
+      "4                  5.0               3.6                1.4               0.2\n",
+      "..                 ...               ...                ...               ...\n",
+      "145                6.7               3.0                5.2               2.3\n",
+      "146                6.3               2.5                5.0               1.9\n",
+      "147                6.5               3.0                5.2               2.0\n",
+      "148                6.2               3.4                5.4               2.3\n",
+      "149                5.9               3.0                5.1               1.8\n",
+      "\n",
+      "[150 rows x 4 columns]\n",
+      "\n",
+      "The dataset contains 150 observations and 4 features\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.datasets import load_iris\n",
     "# Load the Iris dataset\n",
@@ -82,7 +105,9 @@
     "# Display the DataFrame\n",
     "print(iris_df)\n",
     "\n",
-    "# Your code here..."
+    "# Your code here...\n",
+    "rows,columns=iris_df.shape\n",
+    "print(f\"\\nThe dataset contains {rows} observations and {columns} features\")\n"
    ]
   },
   {
@@ -391,7 +416,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -405,12 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "497a84dc8fec8cf8d24e7e87b6d954c9a18a327edc66feb9b9ea7e9e72cc5c7e"
-   }
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
