Data cleaned and code added to answer question_3 about the importance of standardizing a data set.

--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -237,10 +237,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "b2cfec72",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)\n",
+      "0          -0.900681          1.019004          -1.340227         -1.315444\n",
+      "1          -1.143017         -0.131979          -1.340227         -1.315444\n",
+      "2          -1.385353          0.328414          -1.397064         -1.315444\n",
+      "3          -1.506521          0.098217          -1.283389         -1.315444\n",
+      "4          -1.021849          1.249201          -1.340227         -1.315444\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize the StandardScaler\n",
     "scaler = StandardScaler()\n",
@@ -264,11 +277,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "53d77d5c",
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "ab89a74e",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Standardizing the features of a dataset is crucial before applying clustering algorithms like K-Means,\n",
+      "because these algorithms rely on distance-based calculations (such as Euclidean distance) to group similar data points.\n",
+      "\n",
+      "Implications of Using Unstandardized Data:\n",
+      "1. Bias in Clustering: Unstandardized features with larger scales will have more influence on cluster formation, potentially overshadowing other important features.\n",
+      "2. Misleading Results: Clusters might be skewed towards features with higher numerical ranges, causing inaccurate grouping and interpretation.\n",
+      "3. Poor Model Performance: For algorithms like K-Means, this can result in incorrect centroids and a poor fit for the data, reducing the overall performance of the model.\n",
+      "\n",
+      "\u001b[1;92mTo conclude, standardizing ensures that all features contribute equally to the distance metric, resulting in more accurate and meaningful clusters.\n"
+     ]
+    }
+   ],
    "source": [
-    "> Your answer here ... "
+    "print(\"\\nStandardizing the features of a dataset is crucial before applying clustering algorithms like K-Means,\\nbecause these algorithms rely on distance-based calculations (such as Euclidean distance) to group similar data points.\\n\"\n",
+    "\n",
+    "      \"\\nImplications of Using Unstandardized Data:\\n\"\n",
+    "      \"1. Bias in Clustering: Unstandardized features with larger scales will have more influence on cluster formation, potentially overshadowing other important features.\\n\"\n",
+    "      \"2. Misleading Results: Clusters might be skewed towards features with higher numerical ranges, causing inaccurate grouping and interpretation.\\n\"\n",
+    "      \"3. Poor Model Performance: For algorithms like K-Means, this can result in incorrect centroids and a poor fit for the data, reducing the overall performance of the model.\\n\\n\"\n",
+    "      \"\\033[1;92mTo conclude, standardizing ensures that all features contribute equally to the distance metric, resulting in more accurate and meaningful clusters.\")\n"
    ]
   },
   {
