Bootstrapping on the mean petal width was implemented. Mean and 90% confidence interval were computed.

--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -429,23 +429,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "be4c4011",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Mean of Petal Width: 1.2001690666666665\n",
+      "\n",
+      "90% Confidence Interval of Mean Petal Width: (1.0979666666666665, 1.302)\n"
+     ]
+    }
+   ],
    "source": [
     "# Your answer here...\n",
-    "\n",
-    "mean_petal_width = 🤷‍♂️\n",
-    "\n",
+    "petal_width = iris_df['petal width (cm)']\n",
     "np.random.seed(123)\n",
-    "\n",
-    "lower_bound = 🤷‍♂️\n",
-    "upper_bound = 🤷‍♂️\n",
+    "n_bootstrap = 10000\n",
+    "bootstrap_means = np.array([np.mean(np.random. choice(petal_width, size=len(petal_width), replace=True)) for _ in range(n_bootstrap)])\n",
+    "mean_petal_width =np.mean(bootstrap_means)\n",
+    "lower_bound = np.percentile(bootstrap_means, 5)\n",
+    "upper_bound = np.percentile(bootstrap_means, 95)\n",
     "\n",
     "# Display the result\n",
-    "print(f\"Mean of Petal Width: {mean_petal_width}\")\n",
-    "print(f\"90% Confidence Interval of Mean Petal Width: ({lower_bound}, {upper_bound})\")"
+    "print(f\"\\nMean of Petal Width: {mean_petal_width}\")\n",
+    "print(f\"\\n90% Confidence Interval of Mean Petal Width: ({lower_bound}, {upper_bound})\")"
    ]
   },
   {
