Answer to the question why bootstrapping is used in this context was explained.

--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -469,16 +469,38 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "16a6e104",
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "e73984da",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1;92mBootstrapping is used in this context to estimate the distribution of the sample mean of Petal Width without making strong assumptions about the underlying data distribution.\n",
+      "\n",
+      "It allows us to:\n",
+      "1.Generate multiple samples from the observed data (with replacement)\n",
+      "2.Compute the mean for each of these samples\n",
+      "3.Assess the variability of the sample means.\n",
+      "\n",
+      "This helps us understand the stability of the mean estimate by quantifying how much it would vary across different random samples from the same population.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    ">  Your answer..."
+    "print(\"\\n\\033[1;92mBootstrapping is used in this context to estimate the distribution of the sample mean of Petal Width without making strong assumptions about the underlying data distribution.\\n\"\n",
+    "      \"\\nIt allows us to:\\n1.Generate multiple samples from the observed data (with replacement)\\n2.Compute the mean for each of these samples\\n3.Assess the variability of the sample means.\"\n",
+    "      \"\\n\\nThis helps us understand the stability of the mean estimate by quantifying how much it would vary across different random samples from the same population.\\n\\n\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0741b2ca",
+   "id": "e97ae22d",
    "metadata": {},
    "source": [
     "**Question:**\n",
