Purpose of calculating a confidence interval from bootstrapping samples was explained.

--- a/02_activities/assignments/assignment_3.ipynb
+++ b/02_activities/assignments/assignment_3.ipynb
@@ -508,11 +508,33 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e5be82ec",
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "394653e7",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\u001b[1;92mPurpose of calculating a confidence interval from bootstrap samples:\n",
+      "\n",
+      "1. To provide a range within which the true population mean is likely to fall\n",
+      "2. The confidence interval helps interpret the variability of the mean estimate by showing how much uncertainty there is due to sampling variability.\n",
+      "3. If the confidence interval is narrow, it indicates that the estimate is more precise.\n",
+      "4. A Wider interval suggests more variability and less certainty about the true mean.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "> Your answer..."
+    "print(\"\\n\\033[1;92mPurpose of calculating a confidence interval from bootstrap samples:\\n\"\n",
+    "      \"\\n1. To provide a range within which the true population mean is likely to fall\"\n",
+    "      \"\\n2. The confidence interval helps interpret the variability of the mean estimate by showing how much uncertainty there is due to sampling variability.\"\n",
+    "      \"\\n3. If the confidence interval is narrow, it indicates that the estimate is more precise.\" \n",
+    "      \"\\n4. A Wider interval suggests more variability and less certainty about the true mean.\\n\\n\")"
    ]
   },
   {
@@ -526,12 +548,12 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0a7e6778",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a9065af",
    "metadata": {},
-   "source": [
-    "> Your answer here..."
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
